Question 1 are partially finished.

--- a/HW3/HW3Solution.qmd
+++ b/HW3/HW3Solution.qmd
@@ -63,9 +63,9 @@ bq_auth(
 ```{r}
 # Connect to the BigQuery database `biostat-203b-2022winter.mimic4_v1_0_203b`
 con <- dbConnect(
-    bigrquery::bigquery(),
-    project = "biostat-203b-2022winter",
-    dataset = "mimic4_v1_0_203b",
+    bigrquery::bigquery(), 
+    project = "biostat-203b-2022winter", 
+    dataset = "mimic4_v1_0_203b", 
     billing = "biostat-203b-2022winter"
 )
 con
@@ -116,24 +116,82 @@ patients_tble <- tbl(con, "patients") %>%
 
 6. Connect to the `labevents` table and retrieve a subset that only contain subjects who appear in `icustays_tble` and the lab items listed in HW2. 
 ```{r}
-# # TODO
-# labevents_tble <- 
+itemid_want <- c(50912, 50971, 50983, 50902, 50882, 51221, 51301, 50931)
+labevents_tble <- tbl(con, "labevents") %>%
+  filter(itemid %in% itemid_want) %>%
+  semi_join(icustays_tble, by = c("subject_id")) %>%
+  show_query() %>%
+  print(width = Inf)
 ```
+
+```{r}
+d_labitems_tble <- tbl(con, 'd_labitems') %>%
+  filter(itemid %in% itemid_want) %>%
+  mutate(label = str_replace(label, '\\s', '_')) %>%
+  show_query() %>%
+  print(width = Inf)
+```
+
+
 Only keep the first lab measurements during ICU stay and pivot lab items to become variables/columns.
 ```{r}
-# # TODO
-# labevents_tble <- labevents_tble %>% ...
+labevents_tble <- labevents_tble %>%
+  select(subject_id, itemid, valuenum, charttime) %>%
+  left_join(select(icustays_tble, subject_id, intime, outtime),
+     by = c("subject_id")) %>%
+  filter(charttime >= intime & charttime <= outtime) %>%
+  # Keep the first measurement of each lab item for each patient
+  select(subject_id, itemid, charttime) %>%
+  group_by(subject_id, itemid) %>%
+  summarise_all(min) %>%
+  left_join(labevents_tble, by = 
+              c("subject_id", "itemid", "charttime")) %>%
+   #attach label for each itemid so we could pivot with label
+  left_join(select(d_labitems_tble, label, itemid), by = c('itemid')) %>%
+   #important to take off before pivot wider or multiple rows for itemid
+  select(subject_id, label, valuenum) %>% 
+  pivot_wider(names_from = label, values_from = valuenum) %>%
+  show_query() %>%
+  print(width = Inf)
 ```
 
 7. Connect to `chartevents` table and retrieve a subset that only contain subjects who appear in `icustays_tble` and the chart events listed in HW2.
 ```{r}
-# # TODO
-# chartevents_tble <- 
+ditemid_want <- c(220045, 220181, 220179, 223761, 220210)
+chartevents_tble <- tbl(con, "chartevents") %>%
+  filter(itemid %in% ditemid_want) %>%
+  semi_join(icustays_tble, by = c("subject_id")) %>%
+  show_query() %>%
+  print(width = Inf)
 ```
+
+```{r}
+d_items_tble <- tbl(con, 'd_items') %>%
+  filter(itemid %in% ditemid_want) %>%
+  mutate(label = str_replace(label, '\\s', '_')) %>%
+  show_query() %>%
+  print(width = Inf)
+```
+
 Only keep the first chart events during ICU stay and pivot chart events to become variables/columns.
 ```{r}
-# # TODO
-# chartevents_tble <- chartevents_tble %>% ...
+chartevents_tble <- chartevents_tble %>%
+  left_join(select(icustays_tble, subject_id, intime, outtime),
+     by = c("subject_id")) %>%
+  filter(charttime >= intime & charttime <= outtime) %>%
+  # Keep the first measurement of each lab item for each patient
+  select(subject_id, itemid, charttime) %>%
+  group_by(subject_id, itemid) %>%
+  summarise_all(min) %>%
+  left_join(chartevents_tble, by = 
+              c("subject_id", "charttime", 'itemid')) %>%
+   #attach label for each itemid so we could pivot with label
+  left_join(select(d_items_tble, label, itemid), by = c('itemid')) %>%
+   #important to take off before pivot wider or multiple rows for itemid
+  select(subject_id, label, valuenum) %>% 
+  pivot_wider(names_from = label, values_from = valuenum) %>%
+  show_query() %>%
+  print(width = Inf)
 ```
 
 8. Put things together. This step is similar to Q7 of HW2. Using one chain of pipes `%>%` to perform following data wrangling steps: (i) start with the `icustays_tble` for the first ICU stay of each unique patient, (ii) merge in admissions and patients tables, (iii) keep adults only (age at admission >= 18), (iv) merge in the labevents and chartevents tables, (v) create an indicator for 30-day mortality, (vi) save the final tibble to an `icu_cohort.rds` R data file in the `mimiciv_shiny` folder.
@@ -146,8 +204,23 @@ if (!dir.exists("mimiciv_shiny")) {
 ```
 
 ```{r}
-# # TODO.  
-# icu_cohort <- icustays_tble %>% ...
+ icu_cohort <- icustays_tble %>%
+  #join all variables
+  left_join(admissions_tble, by = c("subject_id", "hadm_id")) %>%
+  left_join(patients_tble, by = c("subject_id")) %>%
+  left_join(labevents_tble, by = c("subject_id")) %>%
+  left_join(chartevents_tble, by = c("subject_id")) %>%
+  #get the age of the patents
+  mutate(age_at_admission =  year(admittime) - anchor_year + anchor_age) %>%
+  filter(age_at_admission >= 18) %>%
+  mutate(thirty_day_mort = 
+           ifelse(is.na(deathtime), FALSE,
+                  DATE_DIFF(date(deathtime), date(admittime), DAY) <= 30)) %>%
+  # (vi) save the final tibble to an `icu_cohort.rds` in `mimiciv_shiny`
+  collect() %>%
+  write_rds("mimiciv_shiny/icu_cohort.rds") %>%
+  # show_query() %>%
+  print(width = Inf)
 ```
 
 Close database connection and clear workspace.
