--- a/HW3/HW3Solution.qmd
+++ b/HW3/HW3Solution.qmd
@@ -215,8 +215,7 @@ icu_cohort <- icustays_tble %>%
   filter(age_at_admission >= 18) %>%
   mutate(day30mort = 
            ifelse(is.na(deathtime), FALSE,
-           DATE_DIFF(date(deathtime), date(admittime), DAY) <= 30)) %>%
-  # (vi) save the final tibble to an `icu_cohort.rds` in `mimiciv_shiny`
+           DATE_DIFF(date(deathtime), date(admittime), DAY) <= 30)) %>%`
   collect() %>%
   write_rds("mimiciv_shiny/icu_cohort.rds") %>%
   # show_query() %>%
