--- a/HW3/HW3Solution.qmd
+++ b/HW3/HW3Solution.qmd
@@ -215,11 +215,10 @@ icu_cohort <- icustays_tble %>%
   filter(age_at_admission >= 18) %>%
   mutate(day30mort = 
            ifelse(is.na(deathtime), FALSE,
-           DATE_DIFF(date(deathtime), date(admittime), DAY) <= 30)) %>%`
+           DATE_DIFF(date(deathtime), date(admittime), DAY) <= 30)) %>%
   collect() %>%
   write_rds("mimiciv_shiny/icu_cohort.rds") %>%
-  # show_query() %>%
-  print(width = Inf)
+ print(width = Inf)
 ```
 
 Close database connection and clear workspace.
